--- a/Buckaroos/war/css/styles.css
+++ b/Buckaroos/war/css/styles.css
@@ -7,6 +7,10 @@ body {
 	color: white;
 }
 
+.black-text {
+	color: black;
+}
+
 .btm-padding {
 	padding-bottom: 15px;
 }
@@ -15,6 +19,27 @@ body {
 	border-radius: 4px;
 	width: 100%;
 }
+
+.table-styling {
+  border: 1px solid #FFF;
+  padding: 3px;
+  background-color: #888;
+}
+.table-styling.hover: hover{
+  border: 1px solid #FFF;
+  padding: 3px;
+  background-color: #bbb;
+}
+
+.label-styling {
+	background-color: #888;
+}
+
+.label-styling: hover {
+	background-color: #BBB;
+}
+
+
 
 
 @font-face {
